# siamese

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
public/: player.html
src/: App.tsx  index.css  main.tsx  state.ts
src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  player.rs
src/components/: Background.tsx  Controls.tsx  Seekbar.tsx  SelectFile.tsx  Titlebar.tsx  VolumeControls.tsx
src/utils/: time.ts
